# fpclib

./: .gitignore  LICENSE.md  Platforms  README.md  README.rst  build.bat  fpclib.py  metadata.py  pyproject.toml  setup.py
doc/: make.bat  replacer.py
doc/source/: about.rst  advanced.rst  basics.rst  conf.py  globals.rst  index.rst  tester.py
fpclib/: __init__.py
html/www.potatodude.com/: index.html
scripts/: __init__.py
